--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "dependencies": {
     "express": "^4.18.2",
+    "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
-    "sharp": "^0.32.1"
+    "sharp": "^0.32.1",
+    "videojs-sprite-thumbnails": "^1.0.1",
+    "videojs-thumbnail-sprite": "^0.1.1",
+    "videojs-vtt-thumbnails": "^0.0.13"
   }
 }
