--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "dependencies": {
     "express": "^4.18.2",
+    "fluent-ffmpeg": "^2.1.2",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "sharp": "^0.32.1",
