--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "WebPlaya",
   "version": "1.0.0",
   "dependencies": {
+    "chokidar": "^3.5.3",
     "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.2",
     "moment": "^2.29.4",
