--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "fluent-ffmpeg": "^2.1.2",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
+    "quic": "^0.4.2",
     "sharp": "^0.32.1",
+    "spdy": "^4.0.2",
     "videojs-sprite-thumbnails": "^1.0.1",
     "videojs-thumbnail-sprite": "^0.1.1",
     "videojs-vtt-thumbnails": "^0.0.13"
