--- a/package.json
+++ b/package.json
@@ -2,16 +2,18 @@
   "name": "WebPlaya",
   "version": "1.0.0",
   "dependencies": {
+    "@fastify/formbody": "^7.4.0",
+    "@fastify/multipart": "^7.6.0",
+    "@fastify/static": "^6.10.2",
     "chokidar": "^3.5.3",
     "express": "^4.18.2",
+    "fastify": "^4.18.0",
+    "fastify-formbody": "^5.3.0",
+    "fastify-multer": "^2.0.3",
+    "fastify-multipart": "^5.4.0",
     "fluent-ffmpeg": "^2.1.2",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
-    "quic": "^0.4.2",
-    "sharp": "^0.32.1",
-    "spdy": "^4.0.2",
-    "videojs-sprite-thumbnails": "^1.0.1",
-    "videojs-thumbnail-sprite": "^0.1.1",
-    "videojs-vtt-thumbnails": "^0.0.13"
+    "sharp": "^0.32.1"
   }
 }
