Control the number of concurrent ffmpeg processes.

--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "WebPlaya",
   "version": "1.0.0",
   "dependencies": {
-    "fastify": "^4.18.0",
     "@fastify/static": "^6.10.2",
     "chokidar": "^3.5.3",
+    "fastify": "^4.18.0",
     "fluent-ffmpeg": "^2.1.2",
-    "moment": "^2.29.4"
+    "moment": "^2.29.4",
+    "queue-typescript": "^1.0.1"
   }
 }
