--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "chokidar": "^3.5.3",
     "fastify": "^4.18.0",
     "fluent-ffmpeg": "^2.1.2",
-    "moment": "^2.29.4",
-    "queue-typescript": "^1.0.1"
+    "moment": "^2.29.4"
   }
 }
